# OpenTspline

./: CMakeLists.txt  INSTALL  License.txt  OpenTsplineConfig.cmake.in  OpenTsplineConfigVersion.cmake.in  README.txt
Tspline/: CMakeLists.txt  Cox.cpp  Domain.cpp  TsplineCreator.cpp  TsplineCreator.h  Tspline_operators.cpp  Types.h  Utils.hpp
apps/Tspline/: CMakeLists.txt  Cox.cpp  Tspline.cpp  TsplineBox.cpp  TsplineCylinder.cpp  TsplineMP2Tsplines.cpp  TsplineRefinement.cpp  TsplineSequenceViewer.cpp  TsplineViewer.cpp  TsplineViewerMP.cpp
resources/tmp/: box.tmp  cylinder.tmp
resources/tsp/: hemisphere.tsp  skull_01.tsp  tmesh.tsp
src/Tspline/: CMakeLists.txt  Domain.h  Polyhedron.h  TsplineMultiPatch.cpp  TsplinePatch.cpp
v4r/: CMakeLists.txt
v4r/Tspline/: CMakeLists.txt  Cox.cpp  Cox.h  File.cpp  File.h  Given_border_parameterizer_3.h  Math.hpp  Polyhedron.cpp  Transition.cpp  Transition.h  Tspline.cpp  Tspline.h  TsplineMultiPatch.h  TsplinePatch.h  Types.cpp  Utils.hpp
